force-app/main/default/objects/Filter__c/Filter__c.object-meta.xml
<CustomObject>
    <label>Perso Filter</label>
    <nameField>
        <label>Filter Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Perso Filters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>