force-app/main/default/objects/Filter__c/fields/BccId__c.field-meta.xml
<CustomField>
    <fullName>BccId__c</fullName>
    <description>BCC id: collection id / color id / macro color id</description>
    <externalId>true</externalId>
    <label>Bcc Id</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>