force-app/main/default/objects/Filter__c/fields/MediaFileName__c.field-meta.xml
<CustomField>
    <fullName>MediaFileName__c</fullName>
    <description>media file name (with extension file, no url)</description>
    <label>Media File Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>