force-app/main/default/objects/Filter__c/fields/MediaName__c.field-meta.xml
<CustomField>
    <fullName>MediaName__c</fullName>
    <label>Media Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>