force-app/main/default/objects/Filter__c/fields/TypeId__c.field-meta.xml
<CustomField>
    <fullName>TypeId__c</fullName>
    <description>filter type id (product.collection, sku.marketingColor, sku.macroColor)</description>
    <label>Type Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>