force-app/main/default/objects/Filter__c/fields/TypeName__c.field-meta.xml
<CustomField>
    <fullName>TypeName__c</fullName>
    <description>filter type name (Collections, Colors, Macro Colors)</description>
    <label>Type Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>